# kido-todoapp

./: .gitignore  README.md  app.py  package.json  pnpm-lock.yaml  pyproject.toml
frontend/: .eslintignore  .eslintrc.js  .prettierrc.js  .swcrc  README.md  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/src/: App.tsx  index.tsx
frontend/src/components/: TodoAdd.tsx  TodoDeleteButton.tsx  TodoRender.tsx
frontend/src/lib/: sse.ts  store.ts  types.ts
frontend/src/lib/features/: todoSlice.ts
internals/: firebase.py  models.py  sse.py
views/: index.html
