[tool.poetry]
name = "kidotodo"
version = "0.1.0"
description = "A simple todo application using firebase"
authors = ["noaione <noaione0809@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.85.0"}
orjson = "^3.8.0"
firebase-admin = "^5.4.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
